# pocket-wiki-sync

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Justfile  LICENSE  README.md  cli.py  pyproject.toml
docs/: AGENTS.md
docs/plans/: AGENTS.md
docs/references/: AGENTS.md  CRON_SETUP.md  pre-commit-config.md  project-structure.md
modules/: AGENTS.md  __init__.py  wiki.py
modules/tests/: test_wiki.py
scripts/: pre-commit-detect-secrets.sh
shared/: AGENTS.md  __init__.py  environment.py  errors.py  sync_state.py
shared/pocket/: AGENTS.md  __init__.py  client.py  config.py  models.py
shared/pocket/tests/: test_client.py  test_config.py  test_models.py
shared/tests/: test_environment.py  test_sync_state.py
skills/pocket-wiki-sync/: SKILL.md
tests/: test_cli.py
